plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.codeit'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    implementation("org.mapstruct:mapstruct:1.5.3.Final")
	  annotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'org.springframework.security:spring-security-test'
    runtimeOnly 'org.postgresql:postgresql'
    // runtimeOnly 'com.h2database:h2' // H2는 더 이상 사용하지 않으므로 주석 처리합니다.
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'
    // .env 파일을 사용하기 위한 의존성 추가
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

//	// AWS
//	implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.3.0")
//	implementation 'io.awspring.cloud:spring-cloud-aws-s3'
//	implementation 'io.awspring.cloud:spring-cloud-aws-starter-secrets-manager'
//	implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'
}

tasks.named('test') {
    useJUnitPlatform()
}
